--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
   
 		// Récupère les données du fichier Google Sheets
 		function getDataFromGoogleSheets() {
-		   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1SXK2ruELgSaaPD5QSlMvUzvIn2IoLZ4BhJSyvSGQgZg/edit?usp=sharing';
+		   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vS9N000XvMV8tNN7aEwKzqdL-P7ekOmeGaeJiryQqN5oFmfxjGPpkQ9WYZIyS2X_ye-WLXUmnYtDSY1/pubhtml';
 		   var targetDivId = 'conteneur_test';
 		  
 			Tabletop.init({
