--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
   
 		// Récupère les données du fichier Google Sheets
 		function getDataFromGoogleSheets() {
-		   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1SXK2ruELgSaaPD5QSlMvUzvIn2IoLZ4BhJSyvSGQgZg/export?format=csv';
+		   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRYw2Ym-n3X8jSgTncqD6JHPBwl3XTmiq5ENqzhWscVcXTSgodwTxQp2ClKbQ60KpzBSpIgUpdT1KZC/pub?output=csv';
 		   var targetDivId = 'conteneur_test';
 		  
 			Tabletop.init({
