--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
   
 		// Récupère les données du fichier Google Sheets
 		function getDataFromGoogleSheets() {
-		   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1VYdOp4vncMtv01yV4cYWzboEdwFp-XOKN870L8OXp9U/edit?usp=sharing';
+		   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1VYdOp4vncMtv01yV4cYWzboEdwFp-XOKN870L8OXp9U/export?format=csv';
 		   var targetDivId = 'conteneur_test';
 		  
 			Tabletop.init({
